--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,4 +1,5 @@
 <a href="{{ "/personal" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Personal</h2></a>
+<a href="{{ "/programming" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Programming</h2></a>
 <a href="{{ "/csc290" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">CSC290</h2></a>
 <a href="{{ "/archive" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">Archive</h2></a>
 <a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">About</h2></a>
