--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
+              <a href="{{ site.baseurl }}/personal">Personal</a>
+              <a href="{{ site.baseurl }}/programming">Programming</a>
               <a href="{{ site.baseurl }}/search">Search</a>
               <a href="{{ site.baseurl }}/about">About</a>
             </nav>
