--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
               <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/personal">Personal</a>
               <a href="{{ site.baseurl }}/programming">Programming</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/math-physics">Physics & Math</a>
               <a href="{{ site.baseurl }}/about">About</a>
             </nav>
           </header>
