--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -16,6 +16,45 @@
     font-size: small;
 }
 
+iframe {                                                                      
+    width: 560px;                                                               
+    height: 315px;                                                              
+}  
+
+.img_50 {                                                                     
+    max-width: 50%;                                                             
+}                                                                             
+                                                                                
+.img_60 {                                                                     
+    max-width: 60%;                                                             
+}                                                                             
+                                                                                
+.img_40 {                                                                     
+    max-width: 40%;                                                             
+}                                                                             
+                                                                                
+.img_33 {                                                                     
+    max-width: 30%;                                                             
+}                                                                             
+                                                                                
+.multiple_img_div {                                                           
+    display: inline-block;                                                      
+}                                                                             
+@media only screen and (max-width: 800px) {                                   
+    .img_50, .img_60, .img_40, img_33 {                                         
+      max-width: 100%;                                                          
+    }                                                                           
+                                                                                
+    .multiple_img_div {                                                         
+      display: block;                                                           
+    }                                                                           
+                                                                                
+    iframe {                                                                    
+      width: 80vw;                                                              
+      height: 45vw;                                                             
+    }                                                                           
+}
+
 .highlight {
     background-color: #1e1c3f;
     padding: 7px 7px 7px 10px;
