--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -23,6 +23,11 @@ time, mark, audio, video, .social {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+small {
+  font-size: 80%;
+}
+
 // HTML5 display-role reset for older browsers
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, .social {
