[Rough Draft] Review on Calculus and Analysis 1

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -4,14 +4,13 @@
     margin-right: auto;
 }
 
-
 @media screen and (min-width: 740px) {
     .big_img {
         max-width: 740px;
     }
 }
 
-.excerpt {
+.caption, .excerpt {
     text-align: center;
     font-size: small;
 }
