--- a/_layouts/review.html
+++ b/_layouts/review.html
@@ -21,6 +21,8 @@ layout: default
         {% unless forloop.last %}&nbsp;{% endunless %}
       {% endfor %}
     </div>
+    <p class = "bug"><a alt = "See a mistake? Open an issue. I make a lot of mistakes" href = "https://github.com/zakuArbor/blog/issues/new?labels=bug&title=[bug]:&assignee=zakuarbor&body=**Link:** [{{site.url}}{{page.url}}]({{site.url}}{
+
   </div>
     
   <div class="entry">
