fix link to bug report link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
         {% unless forloop.last %}&nbsp;{% endunless %}
       {% endfor %}
     </div>
-    <p class = "bug"><a alt = "See a mistake? Open an issue. I make a lot of mistakes" href = "https://github.com/zakuArbor/blog/issues/new?labels=bug&title=[bug]:&assignee=zakuarbor&body=**Link:** [{{site.url}}{{page.url}}]({{site.url}}{{page.url}})%0A**Description:**<!--See an issue with the site or the content, please provide a fix-->"><i class = "svg-icon bug"></i> Report a bug</a></p>
+    <p class = "bug"><a alt = "See a mistake? Open an issue. I make a lot of mistakes" href = "https://github.com/zakuArbor/blog/issues/new?labels=bug&title=[bug]:&assignee=zakuarbor&body=**Link:** [{{site.url}}/blog{{page.url}}]({{site.url}}/blog{{page.url}})%0A**Description:**<!--See an issue with the site or the content, please provide a fix-->"><i class = "svg-icon bug"></i> Report a bug</a></p>
   </div>
     
   <div class="entry">
