[POST #9] Integration By Parts using Isolation

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -4,6 +4,11 @@
     margin-right: auto;
 }
 
+.MathJax_Display, .MJXc-display, .MathJax_SVG_Display {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 .bug {
     margin: auto;
     text-align: center;
