--- a/assets/style.scss
+++ b/assets/style.scss
@@ -93,7 +93,7 @@ table {
 }
 
 table tr {
-	border-top: 1px solid #cccccc;
+	/*border-top: 1px solid #cccccc;*/
 	background-color: white;
 	margin: 0;
 	padding: 0;
@@ -112,7 +112,7 @@ table tr th {
 }
 
 table tr td {
-	border: 1px solid #cccccc;
+	/*border: 1px solid #cccccc;*/
 	text-align: left;
 	margin: 0;
 	padding: 6px 13px;
