Remove home button and added archive nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/archive">Archives</a>
               <a href="{{ site.baseurl }}/personal">Personal</a>
               <a href="{{ site.baseurl }}/programming">Programming</a>
               <a href="{{ site.baseurl }}/math-physics">Physics & Math</a>
