--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,16 +35,16 @@
             <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a>
 
             <div class="site-info">
-              <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+              <h1 class="site-name"><a href="{{ site.baseurl }}/" alt = "home page">{{ site.name }}</a></h1>
               <p class="site-description">{{ site.description }}</p> 
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/archive">Archives</a>
-              <a href="{{ site.baseurl }}/personal">Personal</a>
-              <a href="{{ site.baseurl }}/programming">Programming</a>
-              <a href="{{ site.baseurl }}/math-physics">Physics & Math</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/archive" alt = "archive page">Archives</a>
+              <a href="{{ site.baseurl }}/personal" alt = "personal page">Personal</a>
+              <a href="{{ site.baseurl }}/programming" alt = "programming page">Programming</a>
+              <a href="{{ site.baseurl }}/math-physics" alt = "math and physics page">Physics & Math</a>
+              <a href="{{ site.baseurl }}/about" alt = "about page">About</a>
             </nav>
           </header>
         </div>
