[#11] Created Privacy Notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,12 +59,12 @@
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
+            <a href = "../privacy/">Privacy</a><br/>
             {% include svg-icons.html %}
           </footer>
         </div>
       </div>
-    </div>
-
+    </div> 
     {% include analytics.html %}
   </body>
 </html>
