--- a/assets/style.scss
+++ b/assets/style.scss
@@ -414,12 +414,12 @@ nav {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 89px;
+//  height: ;
   background-color: $lightGray;
 }
 
 footer, .social {
-  padding: 20px 0;
+  padding: 5px 0;
   text-align: center;
 }
 
