[post] Rust shadow vs mut

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -9,6 +9,11 @@
     overflow-y: hidden;
 }
 
+.iframe-full {
+  width: 100%;
+  min-height: 500px;
+}
+
 .bug {
     margin: auto;
     text-align: center;
