[#23] Added go to top button

--- a/_layouts/default-math.html
+++ b/_layouts/default-math.html
@@ -51,10 +51,12 @@
       </div>
 
       <div class="wrapper-main">
+        <div id = "top"/>
         <div id="main" role="main" class="container">
           {{ content }}
         </div>
       </div>
+      <div class="back-to-top-wrapper"><a href="#top" class="back-to-top-link" aria-label="Scroll to Top">🔝</a></div>
 
       <div class="wrapper-footer">
         <div class="container">
