--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,11 @@
 
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
+          <div id = "top"/>
           {{ content }}
         </div>
       </div>
+      <div class="back-to-top-wrapper"><a href="#top" class="back-to-top-link" aria-label="Scroll to Top">🔝</a></div>
 
       <div class="wrapper-footer">
         <div class="container">
