--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,12 @@
 //
 
 // Colors
-$blue: #4183C4;
+//$blue: #4183C4;
+$blue: #8ab4f8;
+//$background: #333; 
+$background: #1b1b1b; //mozilla background
+//$footer: #1f1e1e;
+$footer: #0f0e0e;
 
 // Grays
 $black: #000;
