--- a/assets/style.scss
+++ b/assets/style.scss
@@ -19,9 +19,10 @@ html {
 }
 
 body {
-  background: #fff;
+  background: $background;
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #404040;
+  //color: #404040;
+  color: #fff;
   line-height: 1.7;
   font-weight: 400;
   font-size: 18px;
@@ -37,7 +38,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: $darkerGray;
+  color: #fff;//$darkerGray;
   font-weight: bold;
 
   line-height: 1.7;
@@ -151,7 +152,7 @@ table tr td :last-child {
 
 .share-box {
   font-weight: bold;
-  color: #222;
+  color: #fff;
 }
 
 span[data-pullquote] {
@@ -179,7 +180,8 @@ a {
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: #3680f7;//;$blue;
+    text-decoration: underline;
   }
 }
 
@@ -264,11 +266,14 @@ p > img {
 
 .wrapper-masthead {
   margin-bottom: 25px;
+  background-color: $footer;
+  border-bottom: 1px solid;
+  border-color: #1a56bd;
 }
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  //border-bottom: 1px solid $lightGray;
 
   @include mobile {
     text-align: center;
@@ -304,13 +309,17 @@ p > img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $blue;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   text-align: left;
+
+  a {
+    color: $blue;
+  }
 
   @include mobile {
     text-align: center;
@@ -319,7 +328,7 @@ p > img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
+  color: #FFF;//$gray;
   font-size: 16px;
 
   @include mobile {
@@ -342,7 +351,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: $blue;//$darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -415,7 +424,7 @@ nav {
   bottom: 0;
   width: 100%;
 //  height: ;
-  background-color: $lightGray;
+  background-color: $footer;
 }
 
 footer, .social {
@@ -434,7 +443,7 @@ body:after {
 }
 
 #bar {
-    background: #000;
+//    background: #000;
     height: 7px;
     background-size: cover;
     background-position: left 60%;
@@ -465,7 +474,7 @@ body:after {
 
 .author_title{
   text-align: center;
-  color: #939aa1;
+  color: #fff;//#939aa1;
   letter-spacing: 2px;
 }
 
@@ -698,6 +707,7 @@ Modules - reusable parts of our design
 
 .post-tags a {
   font-size: 14.5px;
+  font-weight: bold;
   padding: 2px 13px;
   border: none;
   background-color: #4CAF50;
@@ -717,7 +727,7 @@ Modules - reusable parts of our design
 .pagination a {    
   &:hover {
       background-color: #f1f1f1;
-      color: #333;
+      color: $background;
   }
 }
 
