--- a/assets/style.scss
+++ b/assets/style.scss
@@ -716,11 +716,12 @@ Modules - reusable parts of our design
 }
 
 .pagination a, .pagination span {
-  padding: 7px 18px;
-  border: 1px solid #eee;
+  padding: 12px 18px;
+  font-weight: bold;
+//  border: 1px solid #eee;
   margin-left: -2px;
   margin-right: -2px;
-  background-color: #ffffff;
+//  background-color: #ffffff;
   display: inline-block;
 }
 
