--- a/_layouts/default-math.html
+++ b/_layouts/default-math.html
@@ -32,10 +32,10 @@
       <div class="wrapper-masthead">
         <div class="container">
           <header class="masthead clearfix">
-            <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" /></a>
+            <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="{{ site.title }}" alt="Site avator that links to main page"/></a>
 
             <div class="site-info">
-              <h1 class="site-name"><a href="{{ site.baseurl }}/" alt = "home page">{{ site.name }}</a></h1>
+              <h2 class="site-name"><a href="{{ site.baseurl }}/" alt = "home page">{{ site.name }}</a></h2>
               <p class="site-description">{{ site.description }}</p> 
             </div>
 
