--- a/_layouts/default-math.html
+++ b/_layouts/default-math.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }} – {{ site.description }}{% endif %}</title>
     {% seo title=false %}
     {% include meta.html %}
 
