[#32] Upload missing image directory and fix summary and detail style to match dark theme

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -75,13 +75,14 @@ details {
 }
 
 .note {
-  background-color: #DCDCDC;
+  background-color: #9370DB;//#151515;
   padding: 5px;
 }
 
 .note-body {
-  background-color: #F5F5F5;
+  background-color: #3F3F3F;
   border-bottom: 3px solid;
+  padding-bottom: 5px;
 }
 
 summary {
