[#32] Add background to transparent gifs that have black fonts

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -4,6 +4,11 @@
     margin-right: auto;
 }
 
+.img-background { //for images that have transparency with black font colors
+  background-color: #AAA;
+  padding: 5px;
+}
+
 
 .back-to-top-wrapper {
   position: absolute;
