--- a/assets/style.scss
+++ b/assets/style.scss
@@ -97,25 +97,25 @@ table {
 
 table tr {
 	/*border-top: 1px solid #cccccc;*/
-	background-color: white;
+	//background-color: white;
 	margin: 0;
 	padding: 0;
 }
 
 table tr:nth-child(2n) {
-	background-color: #f8f8f8;
+//	background-color: ##333333;
 }
 
 table tr th {
 	font-weight: bold;
-	border: 1px solid #cccccc;
+	border: 1px solid #ccc;
 	text-align: left;
 	margin: 0;
 	padding: 6px 13px;
 }
 
 table tr td {
-	/*border: 1px solid #cccccc;*/
+	border: 1px solid #cccccc;
 	text-align: left;
 	margin: 0;
 	padding: 6px 13px;
@@ -129,6 +129,11 @@ table tr td :first-child {
 table tr th :last-child,
 table tr td :last-child {
 	margin-bottom: 0;
+}
+
+table th {
+  background-color: #1a1a1a;
+  font-weight: bolder;
 }
 
 /*.detailed .entry p:first-of-type:first-letter {
