--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -20,7 +20,7 @@
     <meta property="og:image" content="{{ site.url }}{{ page.image }}"/>
     <meta property="twitter:image" content="{{ site.url }}{{ page.image }}"/>
     {% else %}
-    <meta property="og:image" content="{{ site.url }}{{ site.avatar }}"/>
-    <meta property="twitter:image" content="{{ site.url }}{{ site.avatar }}"/>
+    <meta property="og:image" content="{{ site.url }}{{ site.image }}"/>
+    <meta property="twitter:image" content="{{ site.url }}{{ site.image }}"/>
     {% endif %}
     <meta property="og:site_name" content="zakuarbor"/>
