--- a/assets/style.scss
+++ b/assets/style.scss
@@ -78,13 +78,16 @@ h2 {
 	}
 }
 
+.transparent-background { //for images with transparent backgrounds
+  background-color: white;
+}
+
 h3 {
   font-size: 20px;
 }
 
 h4 {
   font-size: 18px;
-  color: #222;
 }
 
 p {
