--- a/_layouts/default-math.html
+++ b/_layouts/default-math.html
@@ -30,6 +30,7 @@
     }
   });
 </script>
+<script src = "{{ site.baseurl }}/assets/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
   </head>
