add forgot top button

--- a/_layouts/default-math.html
+++ b/_layouts/default-math.html
@@ -65,8 +65,7 @@
           {{ content }}
         </div>
       </div>
-      <div class="back-to-top-wrapper"><a href="#top" class="back-to-top-link" aria-label="Scroll to Top">🔝</a></div>
-
+      <button onclick="toTop()" id="top_btn" title="Go to top">Top</button>
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
