[feature-experimental] Add comment feature

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,5 +38,5 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>-->
 
-  {% include disqus.html %}
+  {% include discuss.html %}
 </article>
