[feature-experimental] Add comment box to math reviews

--- a/_layouts/review-math.html
+++ b/_layouts/review-math.html
@@ -51,5 +51,5 @@ layout: default-math
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>-->
 
-  {% include disqus.html %}
+  {% include discuss.html %}
 </article>
