[feature-experimental] Add comment box to math posts

--- a/_layouts/post-math.html
+++ b/_layouts/post-math.html
@@ -36,5 +36,5 @@ layout: default-math
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>-->
 
-  {% include disqus.html %}
+  {% include discuss.html %}
 </article>
