[blog] Inser missing images

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -9,6 +9,11 @@
   padding: 5px;
 }
 
+sup {
+  vertical-align: super;
+  font-size: small;
+}
+
 /*
 Code for button to go top top
 source: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp
