[blog] Verify Email Signatures

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -14,6 +14,10 @@ sup {
   font-size: small;
 }
 
+.small-scrollable {
+  font-size: 8px;
+}
+
 /*
 Code for button to go top top
 source: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp
